--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,9 @@ html {
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
     'Liberation Mono', 'Courier New', monospace;
 }
+body {
+  scroll-behavior: smooth;
+}
 
 h1,
 h2 {
@@ -59,4 +62,14 @@ section {
   padding-top: 1rem;
   padding-bottom: 1rem;
   background-color: #fff;
+}
+
+hr {
+  background-color: #dfd7ca;
+  border: 0;
+  opacity: 1;
+  height: 0.5px !important;
+}
+
+.not-found--page--wrapper {
 }
